2353 2fa for transactions (#52)
* Include Quickstart folder in sonar-scanner check

* Move attached workspace one folder higher

* Additional unit tests for TwoFactorAuth service and SecurityContractService

* Additional securityContract unit tests

* Created new Extensions Unit Tests

* License headers add to new files

* ApplicationFunctionService test improvements

* Created new Function Service Unit Tests

* Increased Microsoft.NET.Test.Sdk version from 16.2.0 to 16.4.0

* Increased Microsoft.NET.Test.Sdk version from 16.2.0 to 16.4.0

* Code cleanup and renames for LdapAuthenticationMode:

* New LdapAuthenticationService unit tests with Role test updates

* Code cleanup for better testability and separation of concerns on LdapConnectionService

* Code cleanup for better testability and separation of concerns on LdapConnectionService

* New LdapConnectionService Unit Tests

* New LdapConnectionService Unit Tests

* License header add

* Quickstart cleanup of unneeded controller paths and related objects

* Views cleanup of unneeded controller paths and related objects

* Views cleanup of unneeded controller paths and related objects

* Created Quickstart HomeController unit tests

* Created Quickstart HomeController unit tests

* Added license headers to Quickstart folders

* Added new TwoFactorAuthenticator OTP validation objects and paths to Swagger spec

* Generated code from updated Swagger spec

* Move of ValidationResponse objects to be more centralized and generic

* Implemented shell code for 'ValidateTwoFactorAuthenticationOTPAsync'

* Shared Managers and Stores between the 2 main C# projects

* Corrected ExceptionMiddlewareExtensions_Tests.cs after merge from master

* Corrected test project after merge

* Updated TwoFactorAuthService and unit tests to support new User Manager functionality

* New 'ValidateTwoFactorAuthenticationOTPAsync' unit tests

* New 'ValidateTwoFactorAuthenticationO
