# src/za.co.grindrodbank.a3s/AbstractApiControllers/TwoFactorAuthApi.cs
@@ -37,6 +37,7 @@ namespace za.co.grindrodbank.a3s.AbstractApiControllers
         /// </summary>
         /// <remarks>Removes two-factor authentication for a user.</remarks>
         /// <param name="userId">The UUID of the user.</param>
+        /// <response code="204">No Content.</response>
         /// <response code="400">Bad Request.</response>
         /// <response code="401">Not authenticated.</response>
         /// <response code="403">Forbidden - You are not authorized to remove two-factor authentication.</response>
@@ -51,5 +52,27 @@ namespace za.co.grindrodbank.a3s.AbstractApiControllers
         [ProducesResponseType(statusCode: 404, type: typeof(ErrorResponse))]
         [ProducesResponseType(statusCode: 500, type: typeof(ErrorResponse))]
         public abstract Task<IActionResult> RemoveTwoFactorAuthenticationAsync([FromRoute][Required]Guid userId);
+
+        /// <summary>
+        /// Validates a two-factor authenticator OTP.
+        /// </summary>
+        /// <remarks>Validates a two-factor authenticator OTP.</remarks>
+        /// <param name="twoFactorAuthOTP"></param>
+        /// <response code="200">Successful. OTP validation ran successfully. Check Success parameter and results for more information.</response>
+        /// <response code="400">Bad Request.</response>
+        /// <response code="401">Not authenticated.</response>
+        /// <response code="403">Forbidden - You are not authorized to validate two-factor authentication OTP&#39;s.</response>
+        /// <response code="404">User not found.</response>
+        /// <response code="500">An unexpected error occurred.</response>
+        [HttpPost]
+        [Route("/twoFactorAuth/validate")]
+        [ValidateModelState]
+        [ProducesResponseType(statusCode: 200, type: typeof(ValidationResultResponse))]
+        [ProducesResponseType(statusCode: 400, type: typeof(ErrorResponse))]
+        [ProducesResponseType(statusCode: 401, type: typeof(ErrorResponse))]
+        [ProducesResponseType(statusCode: 403, type: typeof(ErrorResponse))]
+        [ProducesResponseType(statusCode: 404, type: typeof(ErrorResponse))]
+        [ProducesResponseType(statusCode: 500, type: typeof(ErrorResponse))]
+        public abstract Task<IActionResult> ValidateTwoFactorAuthenticationOTPAsync([FromBody]TwoFactorAuthOTP twoFactorAuthOTP);
     }
 }
